Refactor : "메인 메뉴, 에러페이지 최종수정 완료"